RESOLVED FIXED315039
[Site Isolation] Drag & drop is unable to recognize/find dragged files on disk
https://bugs.webkit.org/show_bug.cgi?id=315039
Summary [Site Isolation] Drag & drop is unable to recognize/find dragged files on disk
pascoe@apple.com
Reported 2026-05-18 13:25:55 PDT
Given a file on disk that we are trying to drag and drop into a remote iframe, `m_allowedFilePaths` has the file listed on the main frame but the remote iframe does not, making it not possible to drop the file within the remote iframe b/c it is not recognized.
Attachments
pascoe@apple.com
Comment 1 2026-05-18 13:25:58 PDT
pascoe@apple.com
Comment 2 2026-05-18 14:36:49 PDT
EWS
Comment 3 2026-05-21 15:40:30 PDT
Committed 313694@main (3c5a9e4f2e24): <https://commits.webkit.org/313694@main> Reviewed commits have been landed. Closing PR #65132 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.